--- a/index.html
+++ b/index.html
@@ -1,25 +1,68 @@
 <!DOCTYPE html>
-<head>
+<html>
+  <head>
     <title>Bootstrap Project</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <!--Bootstrap4 CDN-->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+    />
     <script src="script.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js">
-<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" 
-integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
-crossorigin="anonymous">
-</head>
-<body>
-    <div class="container text-center">
-        <p>Who am I?</p>
-        <img src="headerImg.jpg" alt="boots" class="img-fluid rounded-circle" id="boots">
-        <p>I am an adventurer</p>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
+      integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <!--Navbar start-->
+    <nav class="navbar bg-info navbar-expand-md fixed-top">
+      <a href="#"><img src="icons8-butterfly-50.png" alt="butterlyIcon" /></a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navCollapse"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navCollapse">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item"><a href="#who" class="nav-link">who</a></li>
+          <li class="nav-item"><a href="#what" class="nav-link">what</a></li>
+          <li class="nav-item"><a href="#where" class="nav-link">where</a></li>
+        </ul>
+      </div>
+    </nav>
+    <!--division start-->
+    <div class="container text-center" id="who">
+      <p>Who am I?</p>
+      <img
+        src="headerImg.jpg"
+        alt="boots"
+        class="img-fluid rounded-circle"
+        id="boots"
+      />
+      <p>I am an adventurer</p>
     </div>
-    <div class="whatamI bg-1 text-center margin">
-        <h4 class="margin">What am I?</h4>
-<p class="text-center margin">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a href="#" class="btn btn-outline-secondary"> <span class="fas fa-search"></span> Search</a>
-</div>
-</body>
+    <div class="whatamI bg-1 text-center margin" id="what">
+      <h4 class="margin">What am I?</h4>
+      <p class="text-center margin">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+        veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+        commodo consequat.
+      </p>
+      <a href="#" class="btn btn-outline-secondary">
+        <span class="fas fa-search"></span> Search</a
+      >
+    </div>
+    <div class="bg-2 text-center margin" id="where">
+      <h2>Where</h2>
+      <img src="hikingImg.jpg" alt="hiking" class="img-thumbnail" id="hiker" />
+    </div>
+  </body>
 </html>
